# aws-realtime-fraud-detection

./: .dotenv.txt  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test.sh
app/chalice/.chalice/: config.json
app/streamlit/: Dockerfile  app.py
apps/chalice/: app.py
apps/chalice/.chalice/: config.json.txt
devops/: __init__.py
devops/deploy/: README.md  builder.py  cli.py  config.py  s3_uploader.py
devops/infra/: iam.tf  outputs.tf  terraform.tfstate
devops/infra/main/: glue.tf  iam.tf  kinesis.tf  local.tf  outputs.tf  providers.tf  rds.tf  s3.tf  secrets.tf  variables.tf
docs/: architecture.md  chalice.md  spark.md  terraform.md
frontend/: app.py  requirements.txt
notebook/: sagemaker_rcf_fraud_detection.ipynb  sagemaker_xgb_fraud_detection.ipynb
notebooks/: kgl_fraud_detection.ipynb  localhost_fraud_detection.ipynb  localhost_isf_fraud_detection.ipynb  localhost_xgb_fraud_detection copy.ipynb  sagemaker_rcf_fraud_detection.ipynb
scripts/: data_generator.py  definition.py  download_data.py  downloader.py  generate_data.py  inference.py  requirements.txt  utils.py
source/: pyproject.toml
source/src/: definitions.py
source/src/notebooks/: experiments.ipynb  fraud_detection.ipynb
source/src/source/: __init__.py
src/: inference.py  sagemaker_utils.py
src/fraudit/: definition.py  glue_job.py  main.py
src/fraudit/jobs/elt/: config.py  loader.py  schema.py  transform.py
src/fraudit/utils/: create_database_table.py  db_utils.py  logging.py
src/fraudwatcher/data/: generate_endpoint_traffic.py
