[project]
name = "fraudit"                     
version = "0.0.1"
description = "Package for running the data pipeline for AWS fraud detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Godwin AMEGAH", email = "komlan.godwin.amegah@gmail.com"}]
dependencies = [
    "boto3 >=1.28.60",
    "python-dotenv >=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pyspark >=3.5.5",
    "awsglue-dev>=2021.12.30",
    "psycopg2-binary >=2.9.6",
]

test = [
    "pytest",
    "pylint",
    "pytest-mock",
    "pytest-cov",
    "wheel",
    "mock"
]


[project.scripts]
fraudit = "fraudit.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fraudit", "fraudit.*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.setuptools.package-data]
fraudit = ["py.typed"]