[project]
name = "fraudit"                     
version = "0.0.1"
description = "Package for running the data pipeline for AWS fraud detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Godwin AMEGAH", email = "komlan.godwin.amegah@gmail.com"}]
dependencies = [
    # Core dependencies
    "pyspark>=3.5.5",
    "awsglue-dev>=2021.12.30",
    "psycopg2-binary>=2.9.6"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest",
    "pylint",
    "pytest-mock",
    "pytest-cov",
    "wheel",
    "mock"
]

# AWS Chalice dependencies
chalice = [
    "boto3",
    "chalice"
]

# Data processing scripts dependencies
scripts = [
    "requests",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "python-dotenv"
]

# All dependencies combined
all = [
    "pyspark>=3.5.5",
    "awsglue-dev>=2021.12.30",
    # "psycopg2-binary>=2.9.6",
    "boto3",
    "chalice",
    "requests",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "python-dotenv"
]


[project.scripts]
main = "fraudit.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fraudit", "fraudit.*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.setuptools.package-data]
fraudit = ["py.typed"]