[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "goamegah", email = "komlan.godwin.amegah@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.18",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]

[project.scripts]
source = "source:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
